chore: ci security

--- a/.github/workflows/publish-python.yaml
+++ b/.github/workflows/publish-python.yaml
@@ -23,8 +23,11 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
           persist-credentials: false
+
+      - name: "Configure Git safe directory"
+        run: git config --global --add safe.directory /__w/bdkpython/bdkpython
 
       - name: "Install Rust 1.84.1"
         uses: actions-rs/toolchain@v1
@@ -58,7 +61,7 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
           persist-credentials: false
 
       - name: "Install Python"
@@ -94,7 +97,7 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
           persist-credentials: false
 
       - name: "Install Python"
@@ -129,7 +132,7 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
           persist-credentials: false
 
       - uses: actions/setup-python@v4
