--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -28,6 +28,7 @@ jobs:
         with:
           submodules: recursive
           persist-credentials: false
+          fetch-depth: 0
 
       - name: "Configure Git safe directory"
         run: git config --global --add safe.directory /__w/bdkpython/bdkpython
@@ -73,6 +74,7 @@ jobs:
         with:
           submodules: recursive
           persist-credentials: false
+          fetch-depth: 0
 
       - name: "Install Python"
         uses: actions/setup-python@v4
@@ -115,6 +117,7 @@ jobs:
         with:
           submodules: recursive
           persist-credentials: false
+          fetch-depth: 0
 
       - uses: actions/setup-python@v4
         with:
@@ -156,6 +159,7 @@ jobs:
         with:
           submodules: recursive
           persist-credentials: false
+          fetch-depth: 0
 
       - name: "Install Python"
         uses: actions/setup-python@v4
@@ -190,6 +194,7 @@ jobs:
         with:
           submodules: recursive
           persist-credentials: false
+          fetch-depth: 0
 
       - name: "Configure Git safe directory"
         run: git config --global --add safe.directory /__w/bdkpython/bdkpython
