--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
   "cffi>=1.0"
 ]
 
+[project.urls]
+Homepage = "https://github.com/bitcoindevkit"
+Repository = "https://github.com/bitcoindevkit/bdkpython"
+
 [tool.setuptools]
 include-package-data = true
 
