--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -41,10 +41,11 @@ jobs:
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-linux.sh
 
+      - name: "Install build"
+        run: ${PYBIN}/pip install build
+
       - name: "Build wheel"
-        # Specifying the plat-name argument is necessary to build a wheel with the correct name,
-        # see issue #350 for more information
-        run: ${PYBIN}/python setup.py bdist_wheel --plat-name manylinux_2_28_x86_64 --verbose
+        run: ${PYBIN}/python -m build --wheel --verbose
 
       - name: "Install wheel"
         run: ${PYBIN}/pip install ./dist/*.whl
@@ -84,10 +85,13 @@ jobs:
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-arm64.sh
 
+      - name: "Install build"
+        run: pip3 install build
+
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: python3 setup.py bdist_wheel --plat-name macosx_11_0_arm64 --verbose
+        run: python3 -m build --wheel --verbose
 
       # You can't install the arm64 wheel on the CI, so we skip these steps and simply test that the wheel builds
       # - name: "Install wheel and run tests"
@@ -126,10 +130,11 @@ jobs:
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-x86_64.sh
 
+      - name: "Install build"
+        run: pip3 install build
+
       - name: "Build wheel"
-        # Specifying the plat-name argument is necessary to build a wheel with the correct name,
-        # see issue #350 for more information
-        run: python3 setup.py bdist_wheel --plat-name macosx_11_0_x86_64 --verbose
+        run: python3 -m build --wheel --verbose
 
       - name: "Install wheel"
         run: pip3 install ./dist/*.whl
@@ -169,8 +174,11 @@ jobs:
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-windows.sh
 
+      - name: "Install build"
+        run: pip install build
+
       - name: "Build wheel"
-        run: python setup.py bdist_wheel --verbose
+        run: python -m build --wheel --verbose
 
       - name: "Upload artifact test"
         uses: actions/upload-artifact@v4
