--- a/.github/workflows/publish-python.yaml
+++ b/.github/workflows/publish-python.yaml
@@ -38,10 +38,13 @@ jobs:
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-linux.sh
 
+      - name: "Install build"
+        run: pip install build
+
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: ${PYBIN}/python setup.py bdist_wheel --plat-name manylinux_2_28_x86_64 --verbose
+        run: ${PYBIN}/python -m build --wheel --config-setting=--build-option=--plat-name=manylinux_2_28_x86_64 --verbose
 
       - uses: actions/upload-artifact@v4
         with:
@@ -73,11 +76,14 @@ jobs:
 
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-arm64.sh
+      
+      - name: "Install build"
+        run: pip3 install build
 
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: python3 setup.py bdist_wheel --plat-name macosx_11_0_arm64 --verbose
+        run: python3 -m build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_arm64 --verbose
 
       - name: "Upload artifacts"
         uses: actions/upload-artifact@v4
@@ -111,10 +117,13 @@ jobs:
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-x86_64.sh
 
+      - name: "Install build"
+        run: pip3 install build
+
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: python3 setup.py bdist_wheel --plat-name macosx_11_0_x86_64 --verbose
+        run: python3 -m build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_x86_64 --verbose
 
       - uses: actions/upload-artifact@v4
         with:
@@ -146,8 +155,11 @@ jobs:
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-windows.sh
 
+      - name: "Install build"
+        run: pip install build
+
       - name: "Build wheel"
-        run: python setup.py bdist_wheel --verbose
+        run: python -m build --wheel --verbose
 
       - name: "Upload artifacts"
         uses: actions/upload-artifact@v4
