--- a/.github/workflows/publish-python.yaml
+++ b/.github/workflows/publish-python.yaml
@@ -28,7 +28,7 @@ jobs:
           fetch-depth: 0
 
       - name: "Configure Git safe directory"
-        run: git config --global --add safe.directory /__w/bdkpython/bdkpython
+        run: git config --global --add safe.directory /__w/bdk-python/bdk-python
 
       - name: "Install Rust 1.84.1"
         uses: actions-rs/toolchain@v1
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: bdkpython-manylinux_2_28_x86_64-${{ matrix.python }}
-          path: /home/runner/work/bdkpython/bdkpython/dist/*.whl
+          path: /home/runner/work/bdk-python/bdk-python/dist/*.whl
 
   build-macos-arm64-wheels:
     name: "Build macOS arm64 wheel"
@@ -89,7 +89,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bdkpython-macos-arm64-${{ matrix.python }}
-          path: /Users/runner/work/bdkpython/bdkpython/dist/*.whl
+          path: /Users/runner/work/bdk-python/bdk-python/dist/*.whl
 
   build-macos-x86_64-wheels:
     name: "Build macOS x86_64 wheel"
@@ -128,7 +128,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: bdkpython-macos-x86_64-${{ matrix.python }}
-          path: /Users/runner/work/bdkpython/bdkpython/dist/*.whl
+          path: /Users/runner/work/bdk-python/bdk-python/dist/*.whl
 
   build-windows-wheels:
     name: "Build Windows wheel"
@@ -165,7 +165,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bdkpython-win-${{ matrix.python }}
-          path: D:\a\bdkpython\bdkpython\dist\*.whl
+          path: D:\a\bdk-python\bdk-python\dist\*.whl
 
   publish-pypi:
     name: "Publish on PyPI"
