--- a/.github/workflows/python-api-docs.yaml
+++ b/.github/workflows/python-api-docs.yaml
@@ -1,7 +1,9 @@
 name: Build and Upload Python API Docs
 
 on:
-  pull_request:
+  push:
+      branches:
+      - docs/api-docs
   workflow_dispatch:
 
 permissions: {}
@@ -10,6 +12,11 @@ jobs:
   build-docs:
     name: "Build and Upload API Documentation"
     runs-on: ubuntu-24.04
+    container:
+      image: quay.io/pypa/manylinux_2_28_x86_64
+      env:
+        PLAT: manylinux_2_28_x86_64
+        PYBIN: "/opt/python/cp310-cp310/bin"
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
@@ -17,6 +24,14 @@ jobs:
           submodules: recursive
           persist-credentials: false
           fetch-depth: 0
+      
+      - name: "Install Rust 1.84.1"
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.84.1
+
+      - name: "Configure Git safe directory"
+        run: git config --global --add safe.directory /__w/bdk-python/bdk-python
           
       - name: "Set up Python"
         uses: actions/setup-python@v4
@@ -25,14 +40,17 @@ jobs:
 
       - name: "Install Sphinx and Theme"
         run: |
-          python3 -m pip install --upgrade pip
-          pip install sphinx sphinx_rtd_theme
+          ${PYBIN}/python -m pip install --upgrade pip
+          ${PYBIN}/pip install sphinx sphinx_rtd_theme
 
-      - name: "Build python API Documentation"
+      - name: "Generate python API Documentation"
         run: |
           bash ./scripts/generate-linux.sh
-          cd ./docs/
-          python3 generate_docs.py
+          ${PYBIN}/python docs/generate_docs.py
+      
+      - name: "Build HTML Documentation"
+        run: |
+          ${PYBIN}/sphinx-build -b  html -W --keep-going  docs/source docs/_build/html
 
       - name: "Upload API Docs"
         uses: actions/upload-artifact@v4
