--- a/.github/workflows/test-bdk-ffi-latest.yaml
+++ b/.github/workflows/test-bdk-ffi-latest.yaml
@@ -130,10 +130,11 @@ jobs:
         # see issue #350 for more information
         run: python3 -m build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_arm64 --verbose
 
-      - name: "Install wheel and run tests"
-        run: |
-          pip3 install ./dist/*.whl
-          python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
+      - name: "Install wheel"
+        run: pip3 install ./dist/*.whl
+          
+      - name: "Run tests"
+        run: python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
 
       - name: "Upload artifact test"
         uses: actions/upload-artifact@v4
