--- a/.github/workflows/python-api-docs.yaml
+++ b/.github/workflows/python-api-docs.yaml
@@ -19,17 +19,15 @@ jobs:
 
       - name: "Configure Git safe directory"
         run: git config --global --add safe.directory /__w/bdk-python/bdk-python
-
-      - name: "Install Rust 1.84.1"
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.84.1
       
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
+      - name: "Set up Rust"
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        
       - name: "Generate bdk.py"
         env:
           PYBIN: ${{ env.pythonLocation }}/bin
