--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -31,12 +31,10 @@ jobs:
 
       - name: "Configure Git safe directory"
         run: git config --global --add safe.directory /__w/bdk-python/bdk-python
-
-      - name: "Install Rust 1.84.1"
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.84.1
           
+      - name: "Set up Rust"
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-linux.sh
 
@@ -80,7 +78,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-
+      
+      - name: "Set up Rust"
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+      
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-arm64.sh
 
@@ -126,6 +127,9 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+      - name: "Set up Rust"
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-x86_64.sh
 
@@ -170,6 +174,9 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+      - name: "Set up Rust"
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-windows.sh
 
