--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -94,10 +94,10 @@ jobs:
         run: python3 -m build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_arm64 --verbose
 
       # You can't install the arm64 wheel on the CI, so we skip these steps and simply test that the wheel builds
-      # - name: "Install wheel and run tests"
-      #   run: |
-      #     pip3 install ./dist/*.whl
-      #     python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
+      - name: "Install wheel and run tests"
+        run: |
+          pip3 install ./dist/*.whl
+          python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
 
       - name: "Upload artifact test"
         uses: actions/upload-artifact@v4
