ci: add --system for uv pip install in CI
CI installs wheels into the runner/toolcache interpreter (no project venv), so uv pip install must opt in via --system.

Also update local helper/docs to prefer installing into a project venv.

--- a/.github/workflows/test-bdk-ffi-latest.yaml
+++ b/.github/workflows/test-bdk-ffi-latest.yaml
@@ -64,7 +64,7 @@ jobs:
         run: UV_PYTHON=${PYBIN}/python uv build --wheel -C=--build-option=--plat-name=manylinux_2_28_x86_64 -v
 
       - name: "Install wheel"
-        run: uv pip install --python ${PYBIN}/python ./dist/*.whl
+        run: uv pip install --system --python ${PYBIN}/python ./dist/*.whl
 
       - name: "Run tests"
         run: ${PYBIN}/python -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
@@ -115,7 +115,7 @@ jobs:
         run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_arm64 -v
 
       - name: "Install wheel"
-        run: uv pip install --python python3 ./dist/*.whl
+        run: uv pip install --system --python python3 ./dist/*.whl
 
       - name: "Run tests"
         run: python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
@@ -163,7 +163,7 @@ jobs:
         run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_x86_64 -v
 
       - name: "Install wheel"
-        run: uv pip install --python python3 ./dist/*.whl
+        run: uv pip install --system --python python3 ./dist/*.whl
 
       - name: "Run tests"
         run: python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
@@ -212,7 +212,7 @@ jobs:
         run: uv build --wheel -v
 
       - name: "Install dependencies"
-        run: Get-ChildItem 'D:\a\bdk-python\bdk-python\dist\*.whl' | ForEach-Object {uv pip install --python python $_.FullName}
+        run: Get-ChildItem 'D:\a\bdk-python\bdk-python\dist\*.whl' | ForEach-Object {uv pip install --system --python python $_.FullName}
         shell: powershell
 
       - name: "Run tests"
